compiler/testData/cli/js/syntaxError_lt.out
compiler/testData/cli/syntaxError.kt:1:10: error: syntax error: Expecting '}'.
fun a() {
         ^
COMPILATION_ERROR
